# rigid_cabana

./: .gitignore  CMakeLists.txt  load_data.py  visualization_paraview.py
examples/: 01_freely_translating_rigid_body.cpp  02_rotating_rb.cpp  03_colliding_rigid_bodies.cpp  CMakeLists.txt  dem.cpp  sample.cpp  test_01_create_aosoa.cpp  test_01_create_rigid_body.cpp  test_compute_effective_force_and_torque_on_rigid_body.cpp  test_neighbours.cpp  test_rigid_body_outline_template.cpp
